--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <hr>
       <h2>Lorem ipsum dolor sit amet consectetur adipiscing elit eu porttitor ligula donec</h2>
       <!-- Body text -->
-      <p><strong>Duis blandit tempor facilisis. Curabitur ipsum turpis, <a href="#" title="Enlace de prueba">venenatis</a> et massa id, congue dignissim nibh. Praesent vitae justo vel metus faucibus vehicula. Donec vitae semper eros, et viverra leo. Quisque maximus semper mi, sit amet vehicula quam ultricies eu. Nullam euismod orci sed erat blandit vulputate nec vitae arcu. Integer nec imperdiet sem. Nullam a nibh rhoncus, tincidunt arcu eu, porta erat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae semper eros, et viverra leo.</strong></p>
+      <p>Duis blandit tempor facilisis. Curabitur ipsum turpis, <a href="#" title="Enlace de prueba">venenatis</a> et massa id, congue dignissim nibh. Praesent vitae justo vel metus faucibus vehicula. Donec vitae semper eros, et viverra leo. Quisque maximus semper mi, sit amet vehicula quam ultricies eu. Nullam euismod orci sed erat blandit vulputate nec vitae arcu. Integer nec imperdiet sem. Nullam a nibh rhoncus, tincidunt arcu eu, porta erat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae semper eros, et viverra leo.</p>
       <!-- Emphasizes -->
       <div class="emphasizes">
         RELLENA EL FORMULARIO PARA DESCARGAR LA GUÍA <i class="fa fa-long-arrow-right"></i>
@@ -57,9 +57,9 @@
       <form action="post">
         <h3>DESCARGAR E-BOOK GRATIS</h3>
         <fieldset>
-          <input type="text" name="name" placeholder="Nombre" class="formCamp"><br>
-          <input type="text" name="surname" placeholder="Apellidos" class="formCamp"><br>
-          <input type="email" name="email"  placeholder="Email" class="formCamp"><br>
+          <input type="text" name="name" placeholder="Nombre" class="form-camp" ><br>
+          <input type="text" name="surname" placeholder="Apellidos" class="form-camp" ><br>
+          <input type="email" name="email"  placeholder="Email" class="form-camp" ><br>
         </fieldset>
         <fieldset>
           <label><input type="checkbox" name="legal" class="check-box"> Acepto la <a href="#" title="Lea nuestra política de privacidad">política de privacidad</a>*</label><br>
@@ -88,9 +88,13 @@
   <!-- Pop-up -->
   <div class="popup">
     <div class="caption">
-      <button class="close-button">X</button>
+      <button class="close-button"><i class="fa fa-times"></i></button>
       <p>SU E-BOOK JA VAI A SER ENVIADO <br>¡Muchas gracias!</p>
     </div>
+  </div>
+  <div class="empty-space">
+    <button class="close-button1"><i class="fa fa-times"></i></button>
+    <p>¡todos los sitios deben ser llenados!</p>
   </div>
   <script src="js/script.js"></script>
 </body>
