correção nos textos

--- a/index.html
+++ b/index.html
@@ -89,12 +89,12 @@
   <div class="popup">
     <div class="caption">
       <button class="close-button"><i class="fa fa-times"></i></button>
-      <p>SU E-BOOK JA VAI A SER ENVIADO <br>¡Muchas gracias!</p>
+      <p>SU EBOOK SERA ENVIADO <br>¡Muchas gracias!</p>
     </div>
   </div>
   <div class="empty-space">
     <button class="close-button1"><i class="fa fa-times"></i></button>
-    <p>¡todos los sitios deben ser llenados!</p>
+    <p>¡todos los sitios deben ser rellenados!</p>
   </div>
   <script src="js/script.js"></script>
 </body>
